--- a/.github/workflows/bun.js.yml
+++ b/.github/workflows/bun.js.yml
@@ -18,6 +18,6 @@ jobs:
     - uses: actions/checkout@v4
     - uses: oven-sh/setup-bun@v2
     - run: bun install
-    - run: bun ci
+    # - run: bun ci
     - run: bun run build --if-present
     - run: bun test
