--- a/.github/workflows/bun.js.yml
+++ b/.github/workflows/bun.js.yml
@@ -20,3 +20,5 @@ jobs:
       # - run: bun ci
       - run: bun run build
       - run: bun test
+      - name: Deploy on Cloud:
+        - run: curl "https://api.render.com/deploy/srv-crmts8l6l47c73fucdng?key=gjX24k3h4pU"
